--- a/assets/templates/vmetre/css/dop.css
+++ b/assets/templates/vmetre/css/dop.css
@@ -55,9 +55,10 @@ body .calc-prod .ty-product-prices > *:last-child  {
 }
 
 .calc_label {
-    margin-bottom: 8px;
-    font-weight: 700;
+    color: #333;
     font-size: 13px;
+    font-weight: 600;
+    margin-bottom: 8px;
 }
 
 .measure_units {
